--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "engines": {
     "node": ">=20.0.0"
   },
-  "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/src/index.js",
-    "dev": "tsx src/index.ts",
-    "init-seed": "tsx scripts/init_seed.ts",
-    "verify-ledger": "tsx scripts/verify_ledger.ts",
-    "reencrypt": "tsx scripts/reencrypt.ts",
-    "example-agent": "tsx examples/agent_client.ts",
-    "test:integration": "npm run build && node --test dist/tests/*.test.js"
-  },
+"scripts": {
+  "build": "tsc -p tsconfig.json",
+  "start": "node dist/src/index.js",
+  "dev": "tsx src/index.ts",
+  "init-seed": "tsx scripts/init_seed.ts",
+  "verify-ledger": "tsx scripts/verify_ledger.ts",
+  "reencrypt": "tsx scripts/reencrypt.ts",
+  "example-agent": "tsx examples/agent_client.ts",
+  "test:integration": "npm run build && node --test dist/tests/*.test.js",
+  "test": "npm run test:integration"
+},
   "dependencies": {
     "fast-json-patch": "^3.1.1",
     "fastify": "^4.28.1",
