--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,21 +2,18 @@ name: lmv-ci
 
 on:
   push:
-    branches: ["main", "master"]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: ["main", "master"]
+    branches: [ "main", "master" ]
   workflow_dispatch:
 
 jobs:
-
   test-windows:
     runs-on: windows-latest
     timeout-minutes: 20
-
     env:
-      LMV_PASSPHRASE: ci-test-passphrase
+      LMV_PASSPHRASE: "ci-test-passphrase"
       LMV_WRITE_TOKEN: ""
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,40 +21,32 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: lmv/package-lock.json
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: "package-lock.json"
 
       - name: Install
         run: npm ci
-        working-directory: lmv
 
       - name: Build
         run: npm run build
-        working-directory: lmv
 
-      - name: Integration Tests
+      - name: Integration Tests (capture log)
         shell: pwsh
-        run: |
-          npm run test:integration 2>&1 | Tee-Object -FilePath integration.log
-        working-directory: lmv
+        run: npm run test:integration 2>&1 | Tee-Object -FilePath integration.log
 
       - name: Upload integration log
         uses: actions/upload-artifact@v4
         with:
           name: integration-log-windows
-          path: lmv/integration.log
-
-
+          path: integration.log
 
   test-ubuntu:
     runs-on: ubuntu-latest
     timeout-minutes: 20
-
     env:
-      LMV_PASSPHRASE: ci-test-passphrase
+      LMV_PASSPHRASE: "ci-test-passphrase"
       LMV_WRITE_TOKEN: ""
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -65,25 +54,21 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: lmv/package-lock.json
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: "package-lock.json"
 
       - name: Install
         run: npm ci
-        working-directory: lmv
 
       - name: Build
         run: npm run build
-        working-directory: lmv
 
-      - name: Integration Tests
-        run: |
-          npm run test:integration 2>&1 | tee integration.log
-        working-directory: lmv
+      - name: Integration Tests (capture log)
+        run: npm run test:integration 2>&1 | tee integration.log
 
       - name: Upload integration log
         uses: actions/upload-artifact@v4
         with:
           name: integration-log-ubuntu
-          path: lmv/integration.log
+          path: integration.log
