--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Integration Tests (capture log)
         shell: pwsh
-        run: npm run test:integration 2>&1 | Tee-Object -FilePath integration.log
+        run: npm test 2>&1 | Tee-Object -FilePath integration.log
 
       - name: Upload integration log
         uses: actions/upload-artifact@v4
@@ -65,7 +65,7 @@ jobs:
         run: npm run build
 
       - name: Integration Tests (capture log)
-        run: npm run test:integration 2>&1 | tee integration.log
+        run: npm test 2>&1 | tee integration.log
 
       - name: Upload integration log
         uses: actions/upload-artifact@v4
