--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "engines": {
     "node": ">=20.0.0"
   },
-"scripts": {
-  "build": "tsc -p tsconfig.json",
-  "start": "node dist/src/index.js",
-  "dev": "tsx src/index.ts",
+  "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/src/index.js",
+    "dev": "tsx src/index.ts",
   "init-seed": "tsx scripts/init_seed.ts",
   "verify-ledger": "tsx scripts/verify_ledger.ts",
   "reencrypt": "tsx scripts/reencrypt.ts",
   "example-agent": "tsx examples/agent_client.ts",
-  "test:integration": "npm run build && node --test dist/tests/*.test.js",
+  "test:integration": "npm run build && node scripts/run_node_tests.mjs",
   "test": "npm run test:integration"
 },
   "dependencies": {
